syntax = "proto3";
package monitor.proto;
option go_package = ".;proto";

// Message types for CPU load averages.
message CpuLoad {
    float load_avg_1m = 1;  // 1-minute load average
    float load_avg_3m = 2;  // 3-minute load average
    float load_avg_15m = 3; // 15-minute load average
}